allow relative URIs in PM getServices response and setCRC/setONT